Bug 347799 - The color sampler rotates with the canvas
Summary: The color sampler rotates with the canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 5.2.6
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-16 14:46 UTC by Eiko Yumi
Modified: 2025-11-19 19:29 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eiko Yumi 2015-05-16 14:46:11 UTC
A very minor cosmetic bug. Rotating the canvas also causes the color sampler box invoked with the ctrl key to also rotate.

Reproducible: Always

Steps to Reproduce:
1. Rotate the canvas
2. Hold control
3. Observe the rotated color sampler box.

Actual Results:  
Color sampler box is rotated

Expected Results:  
As the tool palette maintains the usual orientation no matter what is the canvas rotation, it is my expectation that the color sampler box should do the same.

Using Windows 10 64bit TP b10074
Comment 1 mvowada 2015-05-18 11:22:07 UTC
Yes, I can confirm this (funny effect though :))
Comment 2 Danilo JR 2015-06-14 10:04:33 UTC
yes, confirmed :)

windows 7 sp1 x64, i7, quadro fx 1800
krita 2.9.5 (x64)
Comment 3 Halla Rempt 2015-08-25 13:14:42 UTC
It's a feature :P I wonder, do we have other on-canvas things that are rotated, too?
Comment 4 Vitamorus 2024-11-13 22:49:42 UTC
Re-confirmed for 5.2.6.
Comment 5 Dmitry Kazakov 2025-11-19 14:09:57 UTC
Git commit ba003ac2d3b87ee157f213fcd4e462d465007ced by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 19/11/2025 at 14:08.
Pushed by dkazakov into branch 'master'.

Make sampler preview not rotate/mirror with canvas

It being a circle now makes this a lot easier, since we just need to
modify its contents instead of displacing the entire thing.

M  +46   -10   libs/ui/tool/KisAsyncColorSamplerHelper.cpp

https://invent.kde.org/graphics/krita/-/commit/ba003ac2d3b87ee157f213fcd4e462d465007ced
Comment 6 dra.w.p.il.e+bugskde 2025-11-19 19:29:19 UTC
Git commit 2eb30bf744190a36b9c98bf113ff798ae0bc1e2c by Carsten Hartenfels.
Committed on 19/11/2025 at 17:24.
Pushed by hartenfels into branch 'krita/5.2'.

Make sampler preview not rotate/mirror with canvas

It being a circle now makes this a lot easier, since we just need to
modify its contents instead of displacing the entire thing.

M  +46   -10   libs/ui/tool/KisAsyncColorSamplerHelper.cpp

https://invent.kde.org/graphics/krita/-/commit/2eb30bf744190a36b9c98bf113ff798ae0bc1e2c