Make sampler preview not rotate/mirror with canvas

It being a circle now makes this a lot easier, since we just need to
modify its contents instead of displacing the entire thing.

BUG:347799